refactor(build): 重构项目构建配置以支持Cleanroom/Unimined
- 移除旧的Mixin加载器类ApplyGrayLateMixinLoadingPlugin和ApplyGrayMixinLoadingPlugin
- 将依赖管理从RetroFuturaGradle迁移到Unimined构建系统
- 更新Gradle包装器版本从8.5到9.6.0
- 配置本地开发依赖项通过libs目录进行管理
- 修改模组依赖关系从appliedenergistics2和ae2fc改为ae2
- 更新日志信息文本为Applied Energistics 2 Supergiant集成
- 重构Gradle属性文件结构和构建脚本逻辑