@@ -1,60 +1,57 @@
 package applygray.integration.ae2;
 
-import gregtech.api.util.AE2PatternCompat;
-
+import ae2.api.crafting.IPatternDetails;
+import ae2.api.crafting.PatternDetailsHelper;
+import ae2.api.stacks.AEItemKey;
+import ae2.api.stacks.AEKey;
+import ae2.api.stacks.GenericStack;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
 import net.minecraft.nbt.NBTTagList;
 import net.minecraft.world.World;
-
-import appeng.api.storage.data.IAEItemStack;
-import appeng.api.networking.crafting.ICraftingPatternDetails;
-import appeng.util.item.AEItemStack;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
- * Thread-safe virtual processing pattern used by the lazy RecipeMap lookup.
- *
- * <p>It deliberately does not depend on an encoded-pattern inventory slot. AE2's
- * planning thread can therefore inspect it without reading a world or tile entity.</p>
+ * Immutable virtual processing pattern generated for a RecipeMap on demand.
+ * Its data only uses Supergiant's GenericStack representation.
  */
-public final class DynamicRecipePatternDetails implements ICraftingPatternDetails {
+public final class DynamicRecipePatternDetails implements IPatternDetails {
 
     private final String recipeKey;
     private final String recipeMapName;
-    private final ItemStack[] inputStacks;
-    private final ItemStack[] outputStacks;
-    private final ItemStack[][] alternatives;
-    private final IAEItemStack[] inputs;
-    private final IAEItemStack[] outputs;
-    private final IAEItemStack[] condensedInputs;
-    private final IAEItemStack[] condensedOutputs;
+    private final Input[] inputs;
+    private final List<GenericStack> outputs;
     private final int circuitConfiguration;
     private final long rawMaterialCost;
     private final int stepCost;
-    private final ItemStack patternStack;
-    private volatile int priority;
+    private final AEItemKey definition;
 
     DynamicRecipePatternDetails(String recipeKey, String recipeMapName,
-                                List<ItemStack> inputs, List<List<ItemStack>> alternatives,
-                                List<ItemStack> outputs, int circuitConfiguration,
+                                List<GenericStack> inputs, List<List<GenericStack>> alternatives,
+                                List<GenericStack> outputs, int circuitConfiguration,
                                 long rawMaterialCost, int stepCost) {
+        if (inputs.isEmpty() || outputs.isEmpty()) {
+            throw new IllegalArgumentException("Dynamic RecipeMap pattern requires inputs and outputs");
+        }
+
         this.recipeKey = recipeKey;
         this.recipeMapName = recipeMapName;
-        this.inputStacks = copyStacks(inputs);
-        this.outputStacks = copyStacks(outputs);
-        this.alternatives = copyAlternatives(alternatives, this.inputStacks);
-        this.inputs = toAeStacks(this.inputStacks);
-        this.outputs = toAeStacks(this.outputStacks);
-        this.condensedInputs = condense(this.inputs);
-        this.condensedOutputs = condense(this.outputs);
+        this.inputs = createInputs(inputs, alternatives);
+        this.outputs = Collections.unmodifiableList(new ArrayList<>(outputs));
         this.circuitConfiguration = circuitConfiguration;
         this.rawMaterialCost = rawMaterialCost;
         this.stepCost = stepCost;
-        this.priority = toPriority(rawMaterialCost, stepCost);
-        this.patternStack = createDisplayPattern(this.inputStacks, this.outputStacks);
+
+        ItemStack encoded = PatternDetailsHelper.encodeProcessingPattern(
+                primaryInputs(inputs), this.outputs, recipeMapName);
+        this.definition = AEItemKey.of(encoded);
+        if (this.definition == null) {
+            throw new IllegalStateException("Could not create a definition for dynamic RecipeMap pattern " + recipeKey);
+        }
     }
 
     public String getRecipeKey() {
@@ -77,9 +74,9 @@ public final class DynamicRecipePatternDetails implements ICraftingPatternDetail
         return stepCost;
     }
 
-    public boolean produces(ItemStack requested) {
-        for (ItemStack output : outputStacks) {
-            if (ItemStack.areItemsEqual(output, requested) && ItemStack.areItemStackTagsEqual(output, requested)) {
+    public boolean produces(AEKey requested) {
+        for (GenericStack output : outputs) {
+            if (output.what().equals(requested)) {
                 return true;
             }
         }
@@ -93,194 +90,155 @@ public final class DynamicRecipePatternDetails implements ICraftingPatternDetail
         data.setInteger("Circuit", circuitConfiguration);
         data.setLong("RawCost", rawMaterialCost);
         data.setInteger("StepCost", stepCost);
-        data.setTag("Inputs", writeStacks(inputStacks));
-        data.setTag("Outputs", writeStacks(outputStacks));
+        data.setTag("Inputs", GenericStack.writeList(primaryInputs()));
+        data.setTag("Outputs", GenericStack.writeList(outputs));
+
         NBTTagList alternativeList = new NBTTagList();
-        for (ItemStack[] options : alternatives) {
+        for (Input input : inputs) {
             NBTTagCompound optionData = new NBTTagCompound();
-            optionData.setTag("Options", writeStacks(options));
+            optionData.setTag("Options", GenericStack.writeList(List.of(input.possibleInputs())));
             alternativeList.appendTag(optionData);
         }
         data.setTag("Alternatives", alternativeList);
         return data;
     }
 
+    @Nullable
     public static DynamicRecipePatternDetails readFromNBT(NBTTagCompound data) {
-        List<ItemStack> inputs = readStacks(data.getTagList("Inputs", 10));
-        List<ItemStack> outputs = readStacks(data.getTagList("Outputs", 10));
-        if (inputs.isEmpty() || outputs.isEmpty() || !data.hasKey("RecipeKey") || !data.hasKey("RecipeMap")) {
+        if (!data.hasKey("RecipeKey", 8) || !data.hasKey("RecipeMap", 8)) {
             return null;
         }
-        List<List<ItemStack>> alternatives = new ArrayList<>();
+
+        List<GenericStack> inputs = nonNull(GenericStack.readList(data.getTagList("Inputs", 10)));
+        List<GenericStack> outputs = nonNull(GenericStack.readList(data.getTagList("Outputs", 10)));
+        if (inputs.isEmpty() || outputs.isEmpty()) {
+            return null;
+        }
+
+        List<List<GenericStack>> alternatives = new ArrayList<>();
         NBTTagList alternativeList = data.getTagList("Alternatives", 10);
         for (int i = 0; i < inputs.size(); i++) {
             if (i < alternativeList.tagCount()) {
-                alternatives.add(readStacks(alternativeList.getCompoundTagAt(i).getTagList("Options", 10)));
+                List<GenericStack> options = nonNull(GenericStack.readList(
+                        alternativeList.getCompoundTagAt(i).getTagList("Options", 10)));
+                alternatives.add(options.isEmpty() ? List.of(inputs.get(i)) : options);
             } else {
-                alternatives.add(java.util.Collections.singletonList(inputs.get(i).copy()));
+                alternatives.add(List.of(inputs.get(i)));
             }
         }
+
         return new DynamicRecipePatternDetails(data.getString("RecipeKey"), data.getString("RecipeMap"),
-                inputs, alternatives, outputs,
-                data.getInteger("Circuit"), data.getLong("RawCost"), data.getInteger("StepCost"));
+                inputs, alternatives, outputs, data.getInteger("Circuit"), data.getLong("RawCost"),
+                data.getInteger("StepCost"));
     }
 
-    private static NBTTagList writeStacks(ItemStack[] stacks) {
-        NBTTagList result = new NBTTagList();
-        for (ItemStack stack : stacks) result.appendTag(stack.writeToNBT(new NBTTagCompound()));
-        return result;
+    @Override
+    public AEItemKey getDefinition() {
+        return definition;
     }
 
-    private static List<ItemStack> readStacks(NBTTagList data) {
-        List<ItemStack> result = new ArrayList<>();
-        for (int i = 0; i < data.tagCount(); i++) {
-            ItemStack stack = new ItemStack(data.getCompoundTagAt(i));
-            if (!stack.isEmpty()) result.add(stack);
+    @Override
+    public IInput[] getInputs() {
+        return inputs.clone();
+    }
+
+    @Override
+    public List<GenericStack> getOutputs() {
+        return outputs;
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        return this == other;
+    }
+
+    @Override
+    public int hashCode() {
+        return System.identityHashCode(this);
+    }
+
+    private List<GenericStack> primaryInputs() {
+        List<GenericStack> result = new ArrayList<>(inputs.length);
+        for (Input input : inputs) {
+            GenericStack primary = input.possibleInputs()[0];
+            result.add(new GenericStack(primary.what(), input.getMultiplier()));
         }
         return result;
     }
 
-    @Override
-    public ItemStack getPattern() {
-        return patternStack.copy();
+    private static List<GenericStack> primaryInputs(List<GenericStack> source) {
+        return Collections.unmodifiableList(new ArrayList<>(source));
     }
 
-    @Override
-    public boolean isValidItemForSlot(int slot, ItemStack stack, World world) {
-        if (slot < 0 || slot >= alternatives.length || stack == null || stack.isEmpty()) return false;
-        for (ItemStack candidate : alternatives[slot]) {
-            if (ItemStack.areItemsEqual(candidate, stack) && ItemStack.areItemStackTagsEqual(candidate, stack)) {
-                return stack.getCount() >= candidate.getCount();
-            }
-        }
-        return false;
-    }
-
-    @Override
-    public boolean isCraftable() {
-        return false;
-    }
-
-    @Override
-    public IAEItemStack[] getInputs() {
-        return copyAeStacks(inputs);
-    }
-
-    @Override
-    public IAEItemStack[] getCondensedInputs() {
-        return copyAeStacks(condensedInputs);
-    }
-
-    @Override
-    public IAEItemStack[] getCondensedOutputs() {
-        return copyAeStacks(condensedOutputs);
-    }
-
-    @Override
-    public IAEItemStack[] getOutputs() {
-        return copyAeStacks(outputs);
-    }
-
-    @Override
-    public boolean canSubstitute() {
-        for (ItemStack[] candidates : alternatives) {
-            if (candidates.length > 1) return true;
-        }
-        return false;
-    }
-
-    @Override
-    public List<IAEItemStack> getSubstituteInputs(int slot) {
-        List<IAEItemStack> result = new ArrayList<>();
-        if (slot < 0 || slot >= alternatives.length) return result;
-        for (ItemStack candidate : alternatives[slot]) {
-            IAEItemStack aeStack = AEItemStack.fromItemStack(candidate);
-            if (aeStack != null) result.add(aeStack);
-        }
-        return result;
-    }
-
-    @Override
-    public ItemStack getOutput(net.minecraft.inventory.InventoryCrafting inventoryCrafting, World world) {
-        return outputStacks.length == 0 ? ItemStack.EMPTY : outputStacks[0].copy();
-    }
-
-    @Override
-    public int getPriority() {
-        return priority;
-    }
-
-    @Override
-    public void setPriority(int priority) {
-        this.priority = priority;
-    }
-
-    private static int toPriority(long rawMaterialCost, int stepCost) {
-        long penalty = Math.min(Integer.MAX_VALUE, rawMaterialCost * 1_000L + Math.max(0, stepCost));
-        return (int) -penalty;
-    }
-
-    private static ItemStack createDisplayPattern(ItemStack[] inputs, ItemStack[] outputs) {
-        ItemStack[] patternInputs = new ItemStack[9];
-        ItemStack[] patternOutputs = new ItemStack[3];
-        for (int i = 0; i < patternInputs.length; i++) {
-            patternInputs[i] = i < inputs.length ? inputs[i].copy() : ItemStack.EMPTY;
-        }
-        for (int i = 0; i < patternOutputs.length; i++) {
-            patternOutputs[i] = i < outputs.length ? outputs[i].copy() : ItemStack.EMPTY;
-        }
-        ItemStack pattern = AE2PatternCompat.createProcessingPattern(patternInputs, patternOutputs, true,
-                AE2PatternCompat.containsFluid(patternInputs) || AE2PatternCompat.containsFluid(patternOutputs));
-        return pattern.isEmpty() ? ItemStack.EMPTY : pattern;
-    }
-
-    private static ItemStack[] copyStacks(List<ItemStack> stacks) {
-        ItemStack[] result = new ItemStack[stacks.size()];
-        for (int i = 0; i < stacks.size(); i++) result[i] = stacks.get(i).copy();
-        return result;
-    }
-
-    private static ItemStack[][] copyAlternatives(List<List<ItemStack>> source, ItemStack[] fallbacks) {
-        ItemStack[][] result = new ItemStack[fallbacks.length][];
-        for (int i = 0; i < fallbacks.length; i++) {
-            List<ItemStack> options = i < source.size() ? source.get(i) : null;
+    private static Input[] createInputs(List<GenericStack> primary,
+                                        List<List<GenericStack>> alternatives) {
+        Input[] result = new Input[primary.size()];
+        for (int i = 0; i < primary.size(); i++) {
+            GenericStack fallback = primary.get(i);
+            List<GenericStack> options = i < alternatives.size() ? alternatives.get(i) : List.of(fallback);
             if (options == null || options.isEmpty()) {
-                result[i] = new ItemStack[]{fallbacks[i].copy()};
-                continue;
+                options = List.of(fallback);
             }
-            result[i] = copyStacks(options);
+            result[i] = new Input(options, fallback.amount());
         }
         return result;
     }
 
-    private static IAEItemStack[] toAeStacks(ItemStack[] stacks) {
-        List<IAEItemStack> result = new ArrayList<>();
-        for (ItemStack stack : stacks) {
-            IAEItemStack aeStack = AEItemStack.fromItemStack(stack);
-            if (aeStack != null) result.add(aeStack);
+    private static List<GenericStack> nonNull(List<@Nullable GenericStack> source) {
+        List<GenericStack> result = new ArrayList<>(source.size());
+        for (GenericStack stack : source) {
+            if (stack != null && stack.amount() > 0) {
+                result.add(stack);
+            }
         }
-        return result.toArray(new IAEItemStack[0]);
+        return result;
     }
 
-    private static IAEItemStack[] condense(IAEItemStack[] stacks) {
-        List<IAEItemStack> result = new ArrayList<>();
-        for (IAEItemStack stack : stacks) {
-            IAEItemStack found = null;
-            for (IAEItemStack existing : result) {
-                if (existing.isSameType(stack)) {
-                    found = existing;
-                    break;
+    private static final class Input implements IInput {
+
+        private final GenericStack[] possibleInputs;
+        private final long multiplier;
+
+        private Input(List<GenericStack> options, long fallbackMultiplier) {
+            List<GenericStack> normalized = new ArrayList<>(options.size());
+            long amount = Math.max(1, fallbackMultiplier);
+            for (GenericStack option : options) {
+                if (option == null || option.amount() <= 0) {
+                    continue;
+                }
+                amount = Math.max(amount, option.amount());
+                normalized.add(new GenericStack(option.what(), 1));
+            }
+            if (normalized.isEmpty()) {
+                throw new IllegalArgumentException("Dynamic RecipeMap pattern contains an empty input");
+            }
+            this.possibleInputs = normalized.toArray(new GenericStack[0]);
+            this.multiplier = amount;
+        }
+
+        @Override
+        public GenericStack[] possibleInputs() {
+            return possibleInputs.clone();
+        }
+
+        @Override
+        public long getMultiplier() {
+            return multiplier;
+        }
+
+        @Override
+        public boolean isValid(AEKey input, World level) {
+            for (GenericStack option : possibleInputs) {
+                if (option.what().equals(input)) {
+                    return true;
                 }
             }
-            if (found == null) result.add(stack.copy());
-            else found.setStackSize(found.getStackSize() + stack.getStackSize());
+            return false;
         }
-        return result.toArray(new IAEItemStack[0]);
-    }
 
-    private static IAEItemStack[] copyAeStacks(IAEItemStack[] source) {
-        IAEItemStack[] result = new IAEItemStack[source.length];
-        for (int i = 0; i < source.length; i++) result[i] = source[i].copy();
-        return result;
+        @Override
+        public @Nullable AEKey getRemainingKey(AEKey template) {
+            return null;
+        }
     }
 }
